--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.0",
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
+    "@codetrix-studio/capacitor-google-auth": "^2.1.3",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -31,10 +32,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
