--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,6 @@
 {
   "appId": "io.ionic.starter",
+  "windowsAndroidStudioPath": "C:\\Users\\therv\\AppData\\Local\\JetBrains\\Toolbox\\apps\\AndroidStudio\\ch-0\\201.7042882\\bin\\studio64.exe",
   "appName": "myApp",
   "bundledWebRuntime": false,
   "npmClient": "npm",
@@ -7,6 +8,14 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "GoogleAuth": {
+      "scopes": [
+        "profile",
+        "email"
+      ],
+      "serverClientId": "214677055022-m9r7kj1e2tavlkomsiqg2ud2gjcqjhp7.apps.googleusercontent.com",
+      "forceCodeForRefreshToken": true
     }
   },
   "cordova": {}
