--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
